@@ -5,6 +5,10 @@
 An embarrassing bug has been fixed, now src/js/adftool_file.mjs calls
 adftool_file_open_generated correctly.
 
+** File.lookup now works in JavaScript
+An other embarrassing bug has been discovered and fixed, which would
+call adftool_lookup with invalid parameters.
+
 * Noteworthy changes in release 0.7.0 (2023-03-17) [alpha]
 ** New function to generate an EEG
 adftool_file_open_generated can now generate a synthetic EEG.
